--- a/components/PartnersMob/PartnersMob.module.scss
+++ b/components/PartnersMob/PartnersMob.module.scss
@@ -2,6 +2,7 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   display: none;
+  column-gap: 20px;
   padding-left: 0 !important;
 
   .swiperSlide {
