--- a/components/Collaboration/Collaboration.module.scss
+++ b/components/Collaboration/Collaboration.module.scss
@@ -3,7 +3,8 @@
   background-size: cover;
   //padding: 245px 0;
   width: 100%;
-  min-height: calc(100vh + 55vh);
+  // min-height: calc(100vh + 55vh);
+  height: 1200px;
   position: relative;
   overflow: hidden;
 
@@ -69,63 +70,73 @@
     }
   }
 
-  @media screen and (max-width:2560px) {
+  // @media screen and (max-width:2560px) {
+  //   .fairy{
+  //     top: 400px;
+  //     right: 400px;
+  //   }
+  // }
+  // @media screen and (max-width:2340px) {
+  //   .fairy{
+  //     top: 300px;
+  //     right: 450px;
+  //   }
+  // }
+  // @media screen and (max-width: 1920px) {
+  //   .fairy{
+  //     top: 100px;
+  //     right: 200px;
+  //   }  
+  // }
+  // @media screen and (max-width: 1920px) {
+  //   .fairy{
+  //     top: 100px;
+  //     right: 200px;
+  //   }  
+  // }
+  // @media screen and (max-width: 1440px) {
+  //   .fairy{
+  //     width: 1000px !important;
+  //     top: 0px;
+  //     right: 200px;
+  //   }  
+  // }
+  // @media screen and (max-width: 1024px) {
+  //   .fairy{
+  //     width: 800px !important;
+  //     top: 50px;
+  //     right: 20px;
+  //   }  
+  // }
+
+  // @media screen and (max-width: 767px) {
+  //   .fairy{
+  //     top: 0;
+  //     right: 0px !important;
+  //     width: 800px !important;
+  //     bottom: 30px !important;
+  //   }  
+  // }
+  // @media screen and (max-width: 500px) {
+  //   .fairy{
+  //     top: 140px;
+  //     right: 0px !important;
+  //     width: 650px !important;
+  //     bottom: 30px !important;
+  //   }  
+  // }
+  .fairy{
+   
+    object-fit: cover;
+    top: 100px;
+    right: 0;
+  }
+  @media screen and (max-width:768px) {
     .fairy{
       top: 400px;
-      right: 400px;
+      width: 800px !important;
     }
   }
-  @media screen and (max-width:2340px) {
-    .fairy{
-      top: 300px;
-      right: 450px;
-    }
-  }
-  @media screen and (max-width: 1920px) {
-    .fairy{
-      top: 100px;
-      right: 200px;
-    }  
-  }
-  @media screen and (max-width: 1920px) {
-    .fairy{
-      top: 100px;
-      right: 200px;
-    }  
-  }
-  @media screen and (max-width: 1440px) {
-    .fairy{
-      width: 1000px !important;
-      top: 0px;
-      right: 200px;
-    }  
-  }
-  @media screen and (max-width: 1024px) {
-    .fairy{
-      width: 800px !important;
-      top: 50px;
-      right: 20px;
-    }  
-  }
-
-  @media screen and (max-width: 767px) {
-    .fairy{
-      top: 0;
-      right: 0px !important;
-      width: 800px !important;
-      bottom: 30px !important;
-    }  
-  }
-  @media screen and (max-width: 500px) {
-    .fairy{
-      top: 140px;
-      right: 0px !important;
-      width: 650px !important;
-      bottom: 30px !important;
-    }  
-  }
-  
-
   .collaborationContainer {
     display: flex;
     flex-direction: column;
