--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -46,14 +46,12 @@ ul li {
 }
 .wrapper {
   min-height: 100%;
-  max-width: 1920px;
-  margin: 0 auto;
   overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   background: url('../public/21.jpg') no-repeat;
-  // background-size: cover;
+  background-size: cover;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
