--- a/components/DragonTabs/DragobTabs.module.scss
+++ b/components/DragonTabs/DragobTabs.module.scss
@@ -11,6 +11,8 @@
     margin: 0 40px 40px 40px;
     //border: 1px solid #fff;
     cursor: pointer;
+    background: linear-gradient(180deg, rgba(23, 76, 93, 0) 0%, #0B1424 45.34%);
+    border-radius: 50px;
     //background: linear-gradient(102.6deg, rgba(255, 255, 255, 0.06) 1.6%, rgba(255, 255, 255, 0.04) 104.49%);
     border-radius: 15px;
     padding: 30px 80px;
