--- a/components/DragonTabs/DragobTabs.module.scss
+++ b/components/DragonTabs/DragobTabs.module.scss
@@ -11,7 +11,12 @@
     margin: 0 40px 40px 40px;
     //border: 1px solid #fff;
     cursor: pointer;
-    
+
+    img {
+      background: linear-gradient(180deg, rgba(23, 76, 93, 0) 0%, #0B1424 45.34%);
+      border-radius: 50px;
+    }
+
     //background: linear-gradient(102.6deg, rgba(255, 255, 255, 0.06) 1.6%, rgba(255, 255, 255, 0.04) 104.49%);
     border-radius: 15px;
     padding: 30px 80px;
@@ -59,9 +64,7 @@
   }
 }
 
-.tabsActive {
-
-}
+.tabsActive {}
 
 @media (max-width: 1100px) {
   .itemContent {
@@ -84,7 +87,7 @@
   .itemTop {
     flex-direction: column-reverse !important;
 
-    .itemDetails{
+    .itemDetails {
       margin-top: 30px;
     }
   }
@@ -117,8 +120,7 @@
     //display: none !important;
     width: 200px;
     height: 200px;
-    background: linear-gradient(180deg, rgba(23, 76, 93, 0) 0%, #0B1424 45.34%);
-    border-radius: 50px;
+
     //position: absolute;
     //right: 0;
   }
@@ -126,6 +128,7 @@
   .tabsActive {
     margin: 0 0 40px 0 !important;
   }
+
   .itemContent {
     font-size: 14px !important;
     line-height: 14px !important;
@@ -146,12 +149,13 @@
 
 .slide img {
   width: 400px !important;
-  height: 400px !important;;
+  height: 400px !important;
 }
 
 .swiperNavPrevRef {
   background-image: url('../../public/arrowLeft.svg');
   left: 0;
+
   @media (max-width: 767.98px) {
     left: -5%;
 
@@ -161,6 +165,7 @@
 .swiperNavNextRef {
   background-image: url('../../public/arrowRight.svg');
   right: 0;
+
   @media (max-width: 767.98px) {
     right: -5%;
 
