--- a/components/DragonTabs/DragobTabs.module.scss
+++ b/components/DragonTabs/DragobTabs.module.scss
@@ -31,6 +31,7 @@
     .itemTop {
       display: flex;
       align-items: center;
+      column-gap: 20px;
       justify-content: space-between;
 
 
